<resources>
    <string name="app_name">Power Corpore</string>
    <string name="fragment_auth_user">Name</string>
    <string name="login_hint_user">User Name</string>
    <string name="login_pass" translatable="false">"Password  "</string>
    <string name="login_hint_pass">Password</string>
    <string name="login_email">Email</string>
    <string name="login_hint_email">Email</string>
    <string name="fragment_button_connect">Sign In</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="main_description">Welcome to</string>
    <string name="mainactivity_fragmentepresent">Fragment active</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="side_nav_bar">Lateral Menu</string>
    <string name="nav_header_desc">Navegation</string>
    <string name="nav_header_title">Header</string>
    <string name="nav_header_subtitle">header_subtitle</string>
</resources>
